--- a/src/css/top-section.css
+++ b/src/css/top-section.css
@@ -118,19 +118,27 @@ li {
   background-color: var(--general-text-color);
 }
 
-.search__input {
+.search__input {  
   color: var(--text-color-main);
   text-align: center;
   font-size: 18px;
   font-weight: 400;
 }
 
+
 .search__input--width-hotel {
   width: 467px;
 }
 
 .search__input--width {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 314px;
+}
+
+.border:hover {
+  border: 3px solid var(--accent-color-line);
 }
 
 .serch--height {
@@ -142,6 +150,7 @@ li {
 .--yellow {
   border: 3px solid var(--accent-color-line);
 }
+
 
 .column {
   display: flex;
@@ -159,7 +168,7 @@ li {
 
 .serch__btn {
   width: 192px;
-  height: 64px;
+  height: 64px;cursor: pointer;
   background-color: var(--color-btn);
   border: 8px solid var(--color-btn);
   color: var(--general-text-color);
@@ -190,4 +199,74 @@ li {
   visibility: hidden;
   width: 0;
   height: 0;
+}
+/* -----------popup-window for input----------------------- */
+
+.popup-window {
+  height: 100%;
+}
+.deactive {
+  display: none;
+}
+.active {
+  display: block;
+}
+.add-input {  
+  width: 259px;
+  position: relative;    
+  padding: 22px;
+  background-color: var(--general-text-color);
+  border-radius: 8px;
+  padding-bottom: 22px;
+  top: 12px;
+  left: 56px;
+}
+.add-input__text {
+  padding-top: 12px;  
+  font-size: 12px;
+}
+.add-input__item {
+  display: flex;
+  justify-content: space-between;
+  font-size: 16px;
+  padding-top: 12px;
+}
+.wrap-btm {
+  display: flex;
+  align-items: center;
+}
+.search__add-elem > span {
+  display: flex;
+  align-items: center;
+}
+.wrap-btm__item { 
+  cursor: pointer;
+  height: 30px;
+  width: 30px;
+  border: 4px solid;
+  background-color: var(--general-text-color);
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+}
+.wrap-btm__number {
+  padding-left: 20px;
+  padding-right: 20px;
+  max-width: 48px;
+}
+.--select-years {
+  margin-top: 12px;
+}
+.--deactive-btm-color {
+  border-color: #CECECE;
+  color: #CECECE;
+}
+.--active-btm-color {
+  border-color: #3077C6;
+  color: #3077C6
+} 
+.js-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 10px;
 }
