Added sessionStorage for section-homes

--- a/src/css/homes.css
+++ b/src/css/homes.css
@@ -1,5 +1,5 @@
 .homes {
- /*  max-height: 828px; */
+  /*  max-height: 828px; */
   padding-top: 120px;
   padding-bottom: 120px;
   background-color: var(--accent-color);
@@ -74,6 +74,6 @@
   flex-wrap: wrap;
 }
 
-.--bottom { 
-  margin-bottom: 3rem
+.--bottom {
+  margin-bottom: 3rem;
 }
